--- a/responsividade.css
+++ b/responsividade.css
@@ -4,6 +4,16 @@
     color:white;
 }
 
+html {
+    width: 100vw;
+    height: 100vh;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+}
+
 a{
     text-decoration: none;
 }
@@ -47,7 +57,7 @@ article{
     justify-content: center;
 }
 
-article div{
+article>div{
     border:1px solid yellow;
     margin:20px 10px 10px 10px;
     min-height: 100px;
@@ -59,6 +69,11 @@ article div{
 article img{
     height: 85%;
     width: 100%;
+}
+
+.legenda{
+    display:flex;
+    justify-content: center;
 }
 
 footer{
