--- a/responsividade.css
+++ b/responsividade.css
@@ -23,14 +23,15 @@ header{
     flex-wrap:wrap;
 }
 
-nav{
+ul{
     display:flex;
     justify-content:space-between;
     align-items:center;
 }
 
-nav p{
+nav li{
     margin:10px;
+    list-style: none;
 }
 
 #main{
@@ -66,10 +67,14 @@ footer{
     min-height: 8vh;
     color:white;
     margin-top:10px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
     display:flex;
     justify-content: center;
     align-items: center;
 }
+
 
 @media screen and (max-width:500px){
 
