Página Trabalhe conosco

--- a/TrabalheConosco/style.css
+++ b/TrabalheConosco/style.css
@@ -1,3 +1,37 @@
 * {
-    
+    margin: 0;
+    padding: 0;
 }
+
+section h1{
+    color: #000000;
+    text-align: center;
+}
+
+section p, h2, h3 {
+    margin: 1vw 10vw;
+    color: black;
+    text-align: center;
+}
+
+section {
+    padding: 15px 35px;
+}
+
+form {
+    margin: 5vh auto;
+}
+
+input {
+    display: block;
+    margin: 15px auto;
+    padding: 7px;
+    width: 25vw;
+}
+
+button {
+    color: black;
+    margin-left: 43.8vw;
+    padding: 7px;
+}
+
