--- a/global.css
+++ b/global.css
@@ -33,7 +33,7 @@ header{
     flex-wrap:wrap;
 }
 
-ul{
+footer ul, header ul{
     display:flex;
     justify-content:space-between;
     align-items:center;
@@ -58,29 +58,9 @@ article{
     justify-content: center;
 }
 
-article>div{
-    border:1px solid yellow;
-    margin:20px 10px 10px 10px;
-    min-height: 100px;
-    max-height: 150px;
-    min-width: 250px;
-    max-width: 280px;
-}
-
-article img{
-    height: 85%;
-    width: 100%;
-}
-
-.legenda{
-    display:flex;
-    justify-content: center;
-}
-
 footer{
     background-color: rgb(55,53,47);
     min-height: 8vh;
-    color:white;
     margin-top:10px;
     width: 100%;
     display:flex;
