--- a/global.css
+++ b/global.css
@@ -5,77 +5,97 @@
     font-family: "SulSans", Helvetica, sans-serif;
 }
 
-html {
-    width: 100vw;
+body {
     height: 100vh;
 }
 
 body {
+    background: #131313;
+}
+
+.menu {
+    position: absolute;
+    top: 0;
     width: 100%;
-    height: 100%;
+    height: 50px;
+    background: #222;
+    z-index: 2;
 }
-
-a{
-    text-decoration: none;
-}
-
-#container{
-    background-color: black;
-}
-
-/* rgb(239,132,58); */
-
-header{
-    background-color: #ffb100;
-    min-height: 8vh;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left:20px;
-    padding-right:20px;
-    flex-wrap:wrap;
-}
-
-footer ul, header ul{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-}
-
-nav li{
-    margin:10px;
+.menu ul, ol {
     list-style: none;
+    position: relative;
+}
+.menu ul li {
+    width: 150px;
+    float: right;
+}
+.menu a {
+    padding: 15px;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    background: #222;
+}
+.menu ul ul {
+    position: absolute;
+    visibility: hidden;
 }
 
-#main{
-    min-height:83vh;
-    width: 100vw;
-    display:flex;
-    align-items: center;
-    justify-content: center;
+.menu ul li:hover ul {
+    visibility: visible;
 }
 
-article{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.menu a:hover {
+    background: #ffb100;
+    color: #222;
 }
 
-footer{
-    background-color: rgb(55,53,47);
-    min-height: 8vh;
-    margin-top:10px;
+.menu ul ul li {
+    float: none;
+    border-bottom: solid 1px #ccc;
+}
+.menu ul ul li a{
+    background: #696969;
+}
+
+footer {
     width: 100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    bottom: 0;
+    background: #222;
+    height: 15vh;
 }
 
+.textorodape p {
+    font-size: 20px;
+    margin: 15vh auto;
+}
+.textorodape ul {
+    position: relative;
+}
+.textorodape ul li {
+    display: inline;
+    width: 150px;
+    float: left;
+}
+.textorodape ul li a {
+    display: inline;
+}
 
-@media screen and (max-width:500px){
+@media(max-width: 800px) {
 
-/*#menu{
-    display: none;
-}*/
-
+    .menu ul li {
+        width: 100%;
+        float: none;
+    }
+    .menu ul ul {
+        position: static;
+        overflow: hidden;
+        max-height: 0;
+        transition: all .4s;
+    }
+    .menu ul li:hover ul{
+        height: auto;
+        max-height: 200px;
+    }
 }
